crates/server/tests/grammar/snapshots/r#mod__grammar__alpha035__context_command_to_main.snap
---
source: tests/grammar/alpha035.rs
expression: "compiler.tokenize(\"$cmd {expr}$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "cmd ",
        ),
        1..5,
    ),
    (
        Token(
            "{",
        ),
        5..6,
    ),
    (
        Token(
            "expr",
        ),
        6..10,
    ),
    (
        Token(
            "}",
        ),
        10..11,
    ),
    (
        Token(
            "$",
        ),
        11..12,
    ),
]
